--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ candle-onnx = { path = "./candle-onnx", version = "0.9.2-alpha.1" }
 candle-transformers = { path = "./candle-transformers", version = "0.9.2-alpha.1" }
 clap = { version = "4.2.4", features = ["derive"] }
 criterion = { version = "0.7.0", default-features = false }
-cudarc = { version = "0.18.1", features = [
+cudarc = { git = "https://github.com/SpenserCai/cudarc", branch = "support_cubin", features = [
     "std",
     "cublas",
     "cublaslt",
