--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,3 +106,6 @@ objc2-foundation = { version = "0.3.1" }
 [profile.release-with-debug]
 inherits = "release"
 debug = true
+
+[patch.crates-io]
+cudarc = { git = "https://github.com/SpenserCai/cudarc", branch = "support_cubin" }
